--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -11,7 +11,7 @@ interface Props {
 
 const { post } = Astro.props;
 const {
-	data: { title, description, ogImage, publishDate, updatedDate },
+	data: { title, description, ogImage, publishedAt: publishDate, updatedAt: updatedDate },
 	slug,
 } = post;
 const socialImage = ogImage ?? `/og-image/${slug}.png`;
@@ -27,7 +27,7 @@ const { headings } = await post.render();
 				<BlogHero content={post} />
 			</div>
 			<div
-				class="prose prose-sm prose-cactus mt-12 prose-headings:font-semibold prose-headings:text-accent-2 prose-headings:before:absolute prose-headings:before:-ms-4 prose-headings:before:text-accent prose-headings:before:content-['#'] prose-th:before:content-none"
+				class="prose prose-sm prose-cactus mt-12 prose-headings:font-semibold prose-headings:text-accent-2 prose-th:before:content-none"
 			>
 				<slot />
 			</div>
