--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,17 +3,18 @@ import PageLayout from "@/layouts/Base";
 import PostPreview from "@/components/blog/PostPreview";
 import SocialList from "@/components/SocialList";
 import { getAllPosts, sortMDByDate } from "@/utils";
+// import { getAllProjects } from "src/utils/project";
 
 const allPosts = await getAllPosts();
 const allPostsByDate = sortMDByDate(allPosts).slice(0, 5);
+// const allProjects = await getAllProjects();
+// const allProjectsByDate = sortMDByDate(allProjects).slice(0, 3);
 ---
 
 <PageLayout meta={{ title: "Home" }}>
 	<section>
 		<h1 class="title mb-6">Paul Lavender-Jones</h1>
-		<p class="mb-4">
-			Hi, I like to make things and sometimes I write about the things I build here.
-		</p>
+		<p class="mb-4">Hi, I like to make things and sometimes I write about it here.</p>
 		<SocialList />
 	</section>
 	<section aria-label="Blog post list" class="mt-16">
@@ -33,4 +34,10 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, 5);
 			}
 		</ul>
 	</section>
+	<!-- <section aria-label="Blog post list" class="mt-16">
+		<h2 class="title mb-4 text-xl">Projects</h2>
+		<ul class="space-y-4 sm:space-y-2">
+			{allProjects.map((p) => <li>{p.data.title}</li>)}
+		</ul>
+	</section> -->
 </PageLayout>
