--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -5,22 +5,22 @@ const year = new Date().getFullYear();
 ---
 
 <footer
-	class="mt-auto flex w-full flex-col items-center justify-center gap-y-2 pb-4 pt-20 text-center align-top font-semibold text-gray-600 dark:text-gray-400 sm:flex-row sm:justify-between sm:text-xs"
+  class="mt-auto flex w-full flex-col items-center justify-center gap-y-2 pb-4 pt-20 text-center align-top font-semibold text-gray-600 sm:flex-row sm:justify-between sm:text-xs dark:text-gray-400"
 >
-	<div class="me-0 sm:me-4">
-		Copyright &copy; {year}{" "}
-		{siteConfig.author}
-	</div>
-	<nav aria-label="More on this site" class="flex gap-x-2 sm:gap-x-0">
-		{
-			menuLinks.map((link) => (
-				<a
-					href={link.path}
-					class="px-4 py-2 sm:px-2 sm:py-0 sm:hover:text-textColor sm:hover:underline"
-				>
-					{link.title}
-				</a>
-			))
-		}
-	</nav>
+  <div class="me-0 sm:me-4">
+    Copyright &copy; {year}{" "}
+    {siteConfig.author}
+  </div>
+  <nav aria-label="More on this site" class="flex gap-x-2 sm:gap-x-0">
+    {
+      menuLinks.map((link) => (
+        <a
+          href={link.path}
+          class="px-4 py-2 sm:px-2 sm:py-0 sm:hover:text-textColor sm:hover:underline"
+        >
+          {link.title}
+        </a>
+      ))
+    }
+  </nav>
 </footer>
