chore: add analytics

--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -29,5 +29,7 @@ const {
       <slot />
     </main>
     <Footer />
+    <script data-goatcounter="https://paullj.goatcounter.com/count" async src="//gc.zgo.at/count.js"
+    ></script>
   </body>
 </html>
