--- a/src/pages/tags/[tag]/[...page].astro
+++ b/src/pages/tags/[tag]/[...page].astro
@@ -25,11 +25,11 @@ interface Props {
   page: Page<CollectionEntry<"post">>;
 }
 
-const { page } = Astro.props;
+const { page }: Props = Astro.props;
 const { tag } = Astro.params;
 
 const meta = {
-  title: `Tag: ${tag}`,
+  title: `Posts tagged as ${tag}`,
   description: `View all posts with the tag - ${tag}`,
 };
 
@@ -50,10 +50,10 @@ const paginationProps = {
 ---
 
 <PageLayout meta={meta}>
-  <h1 class="title mb-6 flex items-center">
-    <a href="/tags/" class="text-accent sm:hover:underline">Tags</a>
-    <span class="me-3 ms-2">→</span>
-    <span class="text-xl">#{tag}</span>
+  <h1 class="title text-xl mb-6 flex items-center">
+    <a href="/tags/" class="opacity-70 hover:cactus-link hover:opacity-100">All Tags</a>
+    <span class="me-3 ms-2">/</span>
+    <span class="capitalize">{tag}</span>
   </h1>
   <section aria-label="Blog post list">
     <ul class="space-y-8">
