--- a/src/components/ThemeProvider.astro
+++ b/src/components/ThemeProvider.astro
@@ -1,10 +1,10 @@
 {/* Inlined to avoid FOUC. */}
 <script is:inline>
+  const lightModePref = window.matchMedia("(prefers-color-scheme: light)");
+
   function getUserPref() {
     const storedTheme = typeof localStorage !== "undefined" && localStorage.getItem("theme");
-    return (
-      storedTheme || (window.matchMedia("(prefers-color-scheme: light)").matches ? "light" : "dark")
-    );
+    return storedTheme || (lightModePref.matches ? "light" : "dark");
   }
 
   function setTheme(newTheme) {
@@ -17,17 +17,14 @@
     const root = document.documentElement;
 
     // class already set to newTheme, exit early
-    if (
-      (newTheme === "dark" && root.classList.contains("dark")) ||
-      (newTheme === "light" && !root.classList.contains("dark"))
-    ) {
+    if (newTheme === root.getAttribute("data-theme")) {
       return;
     }
 
-    const colorThemeMetaTag = document.querySelector("meta[name='theme-color']");
-    document.documentElement.classList.toggle("dark", newTheme === "dark");
-    const bgColour = getComputedStyle(document.body).getPropertyValue("--theme-bg");
+    root.setAttribute("data-theme", newTheme);
 
+    const colorThemeMetaTag = document.querySelector("meta[name='theme-color']");
+    const bgColour = getComputedStyle(document.body).getPropertyValue("--theme-bg");
     colorThemeMetaTag.setAttribute("content", `hsl(${bgColour})`);
     if (typeof localStorage !== "undefined") {
       localStorage.setItem("theme", newTheme);
@@ -42,6 +39,10 @@
 
   // listen for theme-change custom event, fired in src/components/ThemeToggle.astro
   document.addEventListener("theme-change", (e) => {
+    console.log("Theme change event received", e.detail.theme);
     setTheme(e.detail.theme);
   });
+
+  // listen for prefers-color-scheme change.
+  lightModePref.addEventListener("change", (e) => setTheme(e.matches ? "light" : "dark"));
 </script>
