--- a/src/components/ThemeToggle.astro
+++ b/src/components/ThemeToggle.astro
@@ -9,6 +9,8 @@ import { Icon } from "astro-icon";
     class="relative h-9 w-9 rounded-md p-2 ring-zinc-400 transition-all hover:ring-2"
     aria-label="Toggle Dark Mode"
   >
+    <span class="sr-only">Dark Theme</span>
+
     <Icon
       class="absolute start-1/2 top-1/2 h-5 w-5 -translate-x-1/2 -translate-y-1/2 scale-100 opacity-100 transition-all dark:scale-0 dark:opacity-0"
       name="teenyicons:sun-outline"
@@ -26,55 +28,31 @@ import { Icon } from "astro-icon";
 </theme-toggle>
 
 <script>
-  import { rootHasDarkClass } from "@/utils";
+  // Note that if you fire the theme-change event outside of this component, it will not be reflected in the button's aria-checked attribute. You will need to add an event listener if you want that.
+  import { rootInDarkMode } from "@/utils";
 
   class ThemeToggle extends HTMLElement {
-    private button: HTMLButtonElement;
-    private observer: MutationObserver | null;
-
-    constructor() {
-      super();
-      this.button = this.querySelector("button") as HTMLButtonElement;
-      this.observer = null;
-
-      // set inital aria-pressed value
-      this.button.setAttribute("aria-pressed", String(rootHasDarkClass()));
-
-      // button clicked, fire event
-      this.button.addEventListener("click", this.handleThemeBtnClick);
-    }
-
     connectedCallback() {
-      const root = document.documentElement;
+      const button = this.querySelector<HTMLButtonElement>("button")!;
+      // set aria role value
+      button.setAttribute("role", "switch");
+      button.setAttribute("aria-checked", String(rootInDarkMode()));
 
-      // MutationObserver for html class changes, as the theme could be changed elsewhere
-      this.observer = new MutationObserver((mutationsList) => {
-        for (const mutation of mutationsList) {
-          if (mutation.type === "attributes" && mutation.attributeName === "class") {
-            const rootIsDark = (mutation.target as Element).classList.contains("dark");
-            this.button.setAttribute("aria-pressed", String(rootIsDark));
-          }
-        }
+      // button event
+      button.addEventListener("click", () => {
+        // invert theme
+        let themeChangeEvent = new CustomEvent("theme-change", {
+          detail: {
+            theme: rootInDarkMode() ? "light" : "dark",
+          },
+        });
+        // dispatch event -> ThemeProvider.astro
+        document.dispatchEvent(themeChangeEvent);
+
+        // set the aria-checked attribute
+        button.setAttribute("aria-checked", String(rootInDarkMode()));
       });
-      this.observer.observe(root, { attributeFilter: ["class"] });
     }
-
-    disconnectedCallback() {
-      this.observer?.disconnect();
-    }
-
-    handleThemeBtnClick = () => {
-      let isDark = rootHasDarkClass();
-
-      // invert theme
-      let themeChangeEvent = new CustomEvent("theme-change", {
-        detail: {
-          theme: isDark ? "light" : "dark",
-        },
-      });
-      // dispatch event -> ThemeProvider.astro
-      document.dispatchEvent(themeChangeEvent);
-    };
   }
 
   customElements.define("theme-toggle", ThemeToggle);
