--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -17,7 +17,7 @@ const url = new URL(Astro.request.url);
         menuLinks.map((link) => (
           <a
             href={link.path}
-            class="px-4 py-4 sm:py-0 sm:hover:underline"
+            class="mx-4 py-4 sm:hover:cactus-link sm:py-0"
             aria-current={url.pathname === link.path ? "page" : false}
             data-astro-prefetch
           >
