chore: update about page

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -20,16 +20,13 @@ const meta = {
     <p>
       I studied mechanical engineering at the <Link href="https://www.bath.ac.uk/">
         University of Bath
-      </Link>, but I have interests in biomedical engineering, electronic engineering, and computer
+      </Link>, but have an interest in biomedical engineering, electronic engineering, and computer
       science.
     </p>
 
     <p>
-      Outside of work I enjoy learning new things, and am currently exploring <Link
-        href="/tags/rust/"
-      >
-        Rust
-      </Link>.
+      I enjoy learning new things, whether thats how to produce music, or a new programming language
+      to me like <Link href="/tags/rust/">Rust</Link>.
     </p>
 
     <SocialList
